--- a/shuvechhyabajracharya.com/dataops/index.html
+++ b/shuvechhyabajracharya.com/dataops/index.html
@@ -21,6 +21,7 @@
         }
     </style>
     <link rel='dns-prefetch' href='http://bslthemes.com/' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href='https://fonts.gstatic.com/' crossorigin='anonymous' rel='preconnect' />
     <link rel="alternate" type="application/rss+xml" title="Shuvechhya Bajracharya" href="feed/index.html" />
     <link rel="alternate" type="application/rss+xml" title="Shuvechhya Bajracharya" href="comments/feed/index.html" />
